限制元空间最大值触发 OOM